--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
                         "styles": [
                             "src/styles.scss"
                         ],
-                        "scripts": [],
+                        "scripts": [
+                            "node_modules/mermaid/dist/mermaid.min.js"
+                        ],
                         "allowedCommonJsDependencies": [
                             "quill"
                         ]
