--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
         "chart.js": "^3.3.2",
+        "mermaid": "^11.4.0",
+        "ngx-markdown": "^17.2.1",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
         "primeng": "17.2.0",
