--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "ng": "ng",
         "start": "npx ng serve",
         "build": "ng build",
-        "watch": "ng build --configuration development  --base-href '/bibliografia-cerrado/",
+        "watch": "npx ng build --configuration development  --base-href '/bibliografia-cerrado/'",
         "test": "ng test",
         "lint": "ng lint"
     },
